17Mar23=======================================================================
1. Try to nail down incoming PC92s that attempt to change the type of $myalias
   or $mycall. 
2. Do some housekeeping with the startup and finish debugging to make the 
   order of messaging more logical. Also disable some messaging caused by 
   other errors/circumstances causing various object handles disappearing.  
3. Make sure that $mycall and $myalias are upper case (and moan about it if
   they aren't.
10Mar23=======================================================================
1. I am aware that there are windows nodes out there on mojo (brave, impetuous 
   that you are) and wget is not an easy option to download badip files. So, 
   through the power of mojo I give you the new 'download' command. As it 
   stands at the moment, it will download a file from a webserver and place
   it in /spider/local_data. If it downloads successfully, it will overwrite
   any file with that name in /spider/local_data. Needless to say this is a 
   sysop only command. 

24 * * * * run_cmd('download http://www.dxspider.net/download/badip.torexit')
24 * * * * run_cmd('download http://www.dxspider.net/download/badip.torrelay')
24 * * * * run_cmd('download http://www.dxspider.net/download/badip.global')
25 * * * * run_cmd('load/badip')

   would be an obvious use. But it can also be used to download spot, USDB 
   and other data as well. If you do use it then you will still need to 
   do a spawn_cmd in crontab for the conversion programs, but that too is 
   going to change.
07Mar23=======================================================================
1. Fix odd (and old) regression dx command (line ending 59+++) '++' being the 
   culprit.
2. Allow multiple commands on one line when separated with the 2 character 
   string '\n' (sigh). 
3. Move a few init things about on startup so that more parameters are 
   scriptable. 